fix: dark text color in dark mode tooltip

--- a/ssg/sass/style.scss
+++ b/ssg/sass/style.scss
@@ -44,7 +44,7 @@ $accent-dark: rgba(32, 32, 32, 0.8);
 
   text-align: left;
   font-size: medium;
-  color: #564444;
+  color: var(--fg-color);
   text-shadow: none;
 
   padding: 1rem;
